<resources>
    <!-- -->
    <string name="app_name">CLapp</string>
    <string name="gil">GIL</string>
    <string name="rapi_receta">RAPI-RECETA</string>
    <string name="acceso_a_recetas_rapidas_y_sencillas">Acceso a recetas rapidas y sencillas</string>
    <string name="futura_compra">FUTURA COMPRA</string>
    <string name="listado_de_productos_en_tu_almacen_sin_stock">Listado de productos en tu almacen sin stock</string>
    <string name="mi_almacen">MI ALMACEN</string>
    <string name="permite_ver_tu_almacen_y_quitar_productos">Permite ver tu almacen y quitar productos</string>
    <string name="armar_mi_lista">ARMAR MI LISTA</string>
    <string name="permite_agregar_productos_ingredientes_a_tu_lista">Permite agregar productos/ingredientes a tu lista</string>
    <string name="volver">VOLVER</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="hola_todo_el_mundo">Hola todo el mundo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="some_text">
     Some North American Countries!
    </string>

</resources>
